--- a/image.css
+++ b/image.css
@@ -113,3 +113,25 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 /* ----------------------------end iframe---------------------------------  */
+
+@media(max-width:700px){
+    .vertical-ul{
+        width:100%;
+        height:55px;
+        display:flex;
+        position:fixed;
+    }
+    .vertical-ul li a.active{
+        border:0;
+        border-bottom:7px solid rgb(95, 8, 8);
+    }  
+    .dateselect{
+
+
+    }
+    .set-margin{
+      margin:50px;
+    }
+
+  }
+   
